--- a/index.css
+++ b/index.css
@@ -1,22 +1,19 @@
-:root{
-    --primaryColor:orange;
-    --secondaryColor:black;
-    --textColor:white;
+:root {
+    --primaryColor: orange;
+    --secondaryColor: black;
+    --textColor: white;
 }
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
 html,
 body {
     width: 100%;
     height: 100%;
 }
-
 .header {
     text-align: center;
     padding: 5px;
@@ -26,7 +23,6 @@ body {
     color: var(--primaryColor);
     background-color: var(--secondaryColor);
 }
-
 .navbar {
     border: 2px solid var(--secondaryColor);
     display: grid;
@@ -35,7 +31,8 @@ body {
     background-color: var(--secondaryColor);
     color: var(--textColor);
 }
-.navleft>ul>li:hover,.navright>ul>li:hover{
+.navleft>ul>li:hover,
+.navright>ul>li:hover {
     cursor: pointer;
     border-bottom: 1px solid var(--primaryColor);
     color: var(--primaryColor);
@@ -43,7 +40,6 @@ body {
 .navleft {
     align-self: center;
 }
-
 .navleft>ul {
     display: flex;
     flex-direction: row;
@@ -51,11 +47,9 @@ body {
     justify-content: space-evenly;
     list-style: none;
 }
-
 .navright {
     align-self: center;
 }
-
 .navright>ul {
     display: flex;
     flex-direction: row;
@@ -63,63 +57,55 @@ body {
     justify-content: space-evenly;
     list-style: none;
 }
-
-.hero{
+.hero {
     height: 90vh;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-    
-}
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
-.left{
+}
+.left {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-.container{
+.container {
     height: 350px;
     width: 70%;
     padding: 8px;
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
 }
-
-.container>h2{
-    font-size:50px;
+.container>h2 {
+    font-size: 50px;
 }
-h2>span{
+h2>span {
     color: var(--primaryColor);
 }
-
-.container>p{
+.container>p {
     color: rgb(179, 179, 179);
-    font-size: 15px;   
+    font-size: 15px;
 }
-
-.right{
+.right {
     display: flex;
     justify-content: center;
 }
-
-.footer{
+.footer {
     background-color: var(--secondaryColor);
     color: var(--textColor);
     padding: 20px;
 }
-
-.container2{
+.container2 {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
-
-.urls{
+.urls {
     display: flex;
     flex-direction: row;
     align-items: center;
-    
+
 }
-.urls>ul{
+.urls>ul {
     list-style: none;
     width: 30%;
     display: flex;
@@ -127,23 +113,61 @@ h2>span{
     align-items: center;
     gap: 20px;
 }
-.urls>ul>li:hover{
+.urls>ul>li:hover {
     cursor: pointer;
     color: var(--primaryColor);
 }
-
-.tAc{
+.tAc {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.termandcondition{
+.termandcondition {
     width: 50%;
     height: fit-content;
     color: rgb(176, 176, 176);
 }
-
-footer{
+footer {
     text-align: center;
     padding: 10px;
+}
+
+/* MEDIA SCREEN */
+@media (max-width:720px) {
+    .header {
+        font-size: larger;
+    }
+    .navbar {
+        font-size: small;
+    }
+    .navright {
+        display: none;
+    }
+    .image>img {
+        width: 350px;
+    }
+    .footer {
+        margin-top: 2rem;
+    }
+}
+
+@media (max-width:500px) {
+    .footer {
+        margin-top: 17rem;
+    }
+    .container2 {
+        gap: 1rem;
+    }
+    .urls {
+        font-size: small;
+        margin-top: 2rem;
+    }
+    .termandcondition {
+        width: 100%;
+        font-size: x-small;
+        margin-top: 2rem;
+    }
+    footer{
+        margin-top: 3rem;
+    }
 }
